Add classes to target element in CSS

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <h1>You are:</h1>
     <div>
       <div>
+    <div class="inputSection">
+      <div class="inputs">
         <input placeholder="Write something nice"></input>
       </div>
       <button>Add</button>
+      <button class="addOption">Add</button>
     </div>
     <br> </br>
     <button>See result!</button>
@@ -22,5 +25,6 @@
     Last name: <input type="text" name="LastName" value="Mouse"><br>
     <input type="submit" value="Submit">
   </form> --->
+    <button class="SeeResultOption">See result!</button>
   </body>
 </html>
