--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <img src="https://image.ibb.co/bAQvLx/Huskie.jpg" width="50" height="60" alt="dogs">
     <h1>You are:</h1>
     <div>
       <div>
