--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
     Last name: <input type="text" name="LastName" value="Mouse"><br>
     <input type="submit" value="Submit">
   </form> --->
+  <div class="resultSection"></div>
     <button class="SeeResultOption">See result!</button>
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+       <script>
+          $(function() {
+            $('.resultSection').hide()
+
+            var add_option = function() {
+              $('.inputs').append('<input></input>')
+            }
+
+            $('.addOption').click(add_option)
+          })
+        </script>
   </body>
 </html>
