--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   </form> --->
   <div class="resultSection"></div>
     <button class="SeeResultOption">See result!</button>
+    <div class="resultSection"></div>
+    <button class="submit">See result!</button>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -40,7 +42,29 @@
             }
 
             $('.addOption').click(add_option)
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script>
+      $(function() {
+        $('.resultSection').hide()
+        var add_option = function() {
+          $('.inputs').append('<input></input>')
+        }
+        $('.addOption').click(add_option)
+        var options = []
+        var submit = function() {
+          $('.inputSection').hide()
+          $('.resultSection').css('display', 'flex')
+          $('input').each(function() {
+            options.push($(this).val())
           })
         </script>
+          var winner = options[Math.floor(Math.random() * options.length)]
+          console.log(winner)
+          $('.resultSection').text(winner)
+        }
+        $('.submit').click(submit)
+
+      })
+    </script>
   </body>
 </html>
